--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.json.twig
@@ -2,5 +2,6 @@
 "mb.core.featureinfo.error.nolayer": "{{ "mb.core.featureinfo.error.nolayer" | trans }}",
 "mb.core.featureinfo.error.unknownoption": "{{ "mb.core.featureinfo.error.unknownoption" | trans }}",
 "mb.core.featureinfo.popup.btn.ok": "{{ "mb.core.featureinfo.popup.btn.ok" | trans }}",
-"mb.core.metadata.popup.title" : "{{ "mb.core.metadata.popup.title" | trans }}" 
+"mb.core.metadata.popup.title" : "{{ "mb.core.metadata.popup.title" | trans }}",
+"mb.core.metadata.popup.btn.ok" : "{{ "mb.core.metadata.popup.btn.ok" | trans }}"
 }
