display metadata changed

--- a/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/wmsbundle.trans.twig
@@ -36,8 +36,8 @@
 {{ "mb.wms.metadata.section.contact.addressCountry" | trans }}
 {{ "mb.wms.metadata.section.contact.person" | trans }}
 
-{{ "mb.wms.metadata.section.layer" | trans }}
-{{ "mb.wms.metadata.section.layer.name" | trans }}
-{{ "mb.wms.metadata.section.layer.title" | trans }}
-{{ "mb.wms.metadata.section.layer.srs" | trans }}
-{{ "mb.wms.metadata.section.layer.bbox" | trans }}
+{{ "mb.wms.metadata.section.items" | trans }}
+{{ "mb.wms.metadata.section.items.name" | trans }}
+{{ "mb.wms.metadata.section.items.title" | trans }}
+{{ "mb.wms.metadata.section.items.srs" | trans }}
+{{ "mb.wms.metadata.section.items.bbox" | trans }}
