--- a/src/Mapbender/CoreBundle/Resources/views/metadata.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/metadata.html.twig
@@ -23,7 +23,7 @@
     <body>
 {% endif %}
         {% if metadata.container == 'tabs' %}
-        <div class="tabContainerAlt">
+        <div class="tabContainerAlt metadataContainer">
             <ul class="tabs">
             {% for section in metadata.sections %}
                 {% set vt=prefix~section.title %}
@@ -44,11 +44,14 @@
             {% endfor %}        
         </div>
         {% elseif metadata.container == 'accordion' %}
-        <div class="tabContainerAlt">
+        <div class="tabContainerAlt metadataContainer">
         {% for section in metadata.sections %}
             {% set vt=prefix~section.title %}
             <div id="accordion{{loop.index}}" class="accordion{% if loop.first %} active{% endif %}">{{ vt | trans}}</div>
             <div id="container{{loop.index}}" class="container-accordion{% if loop.first %} active{% endif %}">
+            {% if section.title == 'items' %}
+                {% include "MapbenderCoreBundle::metadata_item.html.twig"  with {'items': section.items, 'itemLevel': 1 }%}
+            {% else %}
             {% for item in section.items %}
                 {% for key,val in item %}
                 {% set vt=prefix~section.title~'.'~key %}
@@ -57,15 +60,20 @@
                 <div class="clearContainer"></div>
                 {% endfor %}
             {% endfor %}
+            {% endif %}
             </div>   
         {% endfor %}        
         </div>
         {% else %}
-        <div>
+        <div class="metadataContainer">
         {% for section in metadata.sections %}
             {% set vt=prefix~section.title %}
+            {{ dump(section) }}
             <div>{{ vt | trans}}</div>
             <div>
+            {% if section.title == 'item' %}
+
+            {% else %}
             {% for item in section.items %}
                 {% for key,val in item %}
                 {% set vt=prefix~section.title~'.'~key %}
@@ -74,6 +82,7 @@
                 <div class="clearContainer"></div>
                 {% endfor %}
             {% endfor %}
+            {% endif %}
             </div>   
         {% endfor %}        
         </div>
