--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
@@ -2,28 +2,139 @@
 @import "libs/mixins";
 @import "libs/icons";
 
+
 // ------------------------------------------------------- APPLICATIONS
+.screenshot_upload{
+    padding: 0px;
+    position: relative;
+    min-width: 300px;
+
+    .label{
+        margin: 0px;
+        padding: 2px;
+        font-size: 12px;
+        white-space: nowrap;
+        position: relative;
+
+        .left{
+            min-width: 100px;
+            width: 100px;
+        }
+        .right{
+            min-width: 200px;
+            width: 200px;
+        }
+    }
+
+    .input{
+        border: 0px;
+        padding: 5px;
+    }
+
+    .inputWrapper{
+        position: absolute;
+        left: 0;
+
+        input[type=file]{
+            display: block;
+            float: left;
+            width: 100px;
+            font-size: 20px;
+            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+            filter: alpha(opacity=0);
+            -moz-opacity: 0;
+            -khtml-opacity: 0;
+            opacity: 0;
+            cursor:pointer;
+        }
+        &:after{
+            clear: both;
+        }
+    }
+    .upload_button{
+        $buttonFirstColor:#6fb536;
+        $buttonSecondColor:#5fa229;
+
+        margin:0px;
+        padding-left: 10px;
+        padding-right: 10px;
+
+        border:1px solid darken($buttonSecondColor, 5%);
+        color:$lightFontColor;
+        background-color:$buttonFirstColor;
+        &.hover,            
+        &:hover{
+            background-color:darken($buttonFirstColor, 5%);
+
+        }
+    }
+
+
+    .upload{
+        font-size: 30px;
+    }
+    &:after{
+        clear: both;
+    }}
+
+
+
+
+
+.upload_label{
+    overflow: hidden;
+
+}
 .listFilterInput{
-  margin-bottom:$space;
-  width:250px;
+    margin-bottom:$space;
+    width:250px;
 }
 .listFilterApplicationBoxes{
-  $col1Width: 120px;
-  $height:120px;
+    $col1Width: 120px;
+    $height:120px;
 
-  .filterItem{
-    min-height:$height;
-  }
-  .col1{width:$col1Width;}
-  .col2{
-    height:$height;
-    margin-left: $col1Width;
-  }
-  .iconAppDefault{
-    font-size: 70px;
-    line-height: 110px;
-    color:lighten($darkFontColor, 10%);
-  }
+    .filterItem{
+        min-height:$height;
+    }
+    .col1{width:$col1Width;
+          padding:0px;
+          display:table;
+          
+          &.default{
+            border: 1px solid #a2a2a2;
+            background-color:#404040;
+        }
+          div.cell{
+            display: table-cell;
+            vertical-align:middle;
+            text-align: center;
+            padding: 0;
+            margin:0;
+            height: 120px;
+            width: 120px;
+            
+            img{
+                max-height: 100%;
+                max-width: 100%;
+                width: inherit;
+/*                width: auto;*/
+                display: block;
+                margin: 0 auto;
+            }
+          }
+    }
+    
+    
+
+    .col2{
+        height:$height;
+        margin-left: $col1Width;
+    }
+    .iconAppDefault{
+        font-size: 70px;
+        line-height: 120px;
+        color:lighten($darkFontColor, 10%);
+    }
 }
 .elementPopup{width:$popupModalWidth;}
 
@@ -34,43 +145,100 @@
 
 // ----------------------------------------------- NEW/EDIT APPLICATION
 .applicationTabContainer{
-  margin-bottom:$space;
+    margin-bottom:$space;
 
-  table{
-    .iconCheckbox{@extend .iconPublish}
-    .iconCheckboxActive{@extend .iconPublishActive}
-  }
+    table{
+        .iconCheckbox{@extend .iconPublish}
+        .iconCheckboxActive{@extend .iconPublishActive}
+    }
 }
 .containerBaseData{
-  .labelInput{
-    width:80px;
-    float:left;
-    display: block;
-    margin-bottom: $space/2;
-  }
-  textarea, input, .dropdown{min-width: 300px;}
-  textarea{height:100px;}
-  .messageBox{
-    width:270px;
-    @include absolute($space $space '' '');
-  }
+
+    $height: 215px;
+    $width: 300px;
+    // screen shot holder
+    .screenshot_img{
+        width:300px;
+
+        border: 1px solid #c0c0c0;
+        background-color: #f9f9f9;
+        display: table;
+        overflow: hidden;
+
+        &.default{
+            border: 1px solid #a2a2a2;
+            background-color:#404040;
+        }
+
+        &.iconAppDefault{
+            font-size: 120px;
+            padding-top: 50px;
+            padding-left: 85px;
+            padding-bottom: 0px;
+            display: block;
+            line-height: 110px;
+            height: $height+2 !important;
+
+            color:lighten($darkFontColor, 10%);
+        }
+
+        .delete{
+            position: absolute;
+            /*display: none;*/
+            right: 20px;
+            z-index: 20;
+        }
+
+        div.cell{
+            display: table-cell;
+            vertical-align:middle;
+            text-align: center;
+            padding: 0;
+            margin:0;
+            height: $height;
+            max-width: $width;
+            
+            img{
+                max-height: 100%;
+                max-width: 100%;
+                width: auto;
+                height: auto;
+                display: block;
+                margin: 0 auto;
+            }
+        }
+    }
+
+
+    .labelInput{
+        width:80px;
+        float:left;
+        display: block;
+        margin-bottom: $space/2;
+    }
+    textarea, input, .dropdown{min-width: 300px;}
+    textarea{height:100px;}
+    .messageBox{
+        width:270px;
+        @include absolute($space $space '' '');
+    }
 }
 .containerLayers{
-  .iconCheckbox{@extend .iconPublish}
-  .iconCheckboxActive{@extend .iconPublishActive}
+    .iconCheckbox{@extend .iconPublish}
+    .iconCheckboxActive{@extend .iconPublishActive}
 }
 .popup{
-  .popupSubContent{
-    overflow: visible;
-    .labelInput, .input{float:left;}
-  }
+    .popupSubContent{
+        overflow: visible;
+        .labelInput, .input{float:left;}
+    }
 }
 .elementsTable{
-  tbody tr{cursor:move;}
-  .typeColumn{width:30%;} // very ugly, but fixing the scale behaviour by dragging at the moment
-  .titleColumn{width:50%;}
-  .ui-sortable-helper{background-color:darken($contentColor, 3%)}
-  .placeholderRow{height:$space;}
+    tbody tr{cursor:move;}
+    .typeColumn{width:30%;} // very ugly, but fixing the scale behaviour by dragging at the moment
+    .titleColumn{width:50%;}
+    .ui-sortable-helper{background-color:darken($contentColor, 3%)}
+    .placeholderRow{height:$space;}
 }
 
 
@@ -79,35 +247,35 @@
 
 // ------------------------------------------------------------- LAYOUT
 .checkContainer{
-  position:relative;
-  color:$middleFontColor;
-  display: block;
-  margin-bottom: $space/2;
-  background-color: $contentColor;
-  padding:5px $space/2 5px $space/2;
-  border:solid 1px white;
-  @include border-radius($radius);
+    position:relative;
+    color:$middleFontColor;
+    display: block;
+    margin-bottom: $space/2;
+    background-color: $contentColor;
+    padding:5px $space/2 5px $space/2;
+    border:solid 1px white;
+    @include border-radius($radius);
 
-  .iconOk{
-    @include opacity(0);
-    @include pos(5px,5px,'','');
-  }
+    .iconOk{
+        @include opacity(0);
+        @include pos(5px,5px,'','');
+    }
 
-  &:hover{
-    background-color: white;
-    border:solid 1px darken(white, 15%);
-    .iconOk{@include opacity(1);}
-  }
+    &:hover{
+        background-color: white;
+        border:solid 1px darken(white, 15%);
+        .iconOk{@include opacity(1);}
+    }
 }
 .regionProperties{
-  margin-right: $space/2;
-  .iconCheckbox{@extend .iconTab}
-  .iconCheckboxActive{@extend .iconTabActive}
-  .labelInput{display:none;}
+    margin-right: $space/2;
+    .iconCheckbox{@extend .iconTab}
+    .iconCheckboxActive{@extend .iconTabActive}
+    .labelInput{display:none;}
 }
 .region{
-  padding-top:$space;
-  border-top:dashed 1px darken(#fff, 30%);
+    padding-top:$space;
+    border-top:dashed 1px darken(#fff, 30%);
 }
 
 
@@ -116,12 +284,12 @@
 
 // ------------------------------------------------------------- LAYERS
 .layersetForm{
-  .labelInput{width:40px;float:left;}
+    .labelInput{width:40px;float:left;}
 }
 
 .layersetTable{
-  tbody tr{cursor:move;}
-  .idColumn{width:3%;}
-  .typeColumn{width:7%;} // very ugly, but fixing the scale behaviour
-  .titleColumn{width: 70%;}
+    tbody tr{cursor:move;}
+    .idColumn{width:3%;}
+    .typeColumn{width:7%;} // very ugly, but fixing the scale behaviour
+    .titleColumn{width: 70%;}
 }
