--- a/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/index.html.twig
@@ -25,7 +25,15 @@
   <ul id="listFilterApplications" class="listFilterContainer clear listFilterBoxes listFilterApplicationBoxes">
     {% for application in applications %}
       <li class="filterItem">
-        <div class="col1 iconAppDefault"></div>
+          {% if application.screenshot is not null %}
+            <div class="col1">
+                <div class="cell">
+                    <img src="{{ uploads_web_url }}/{{application.slug}}/{{application.screenshot}}?t={% if time != null %}{{ time | date('d.m.Y-H:i:s') }}{% endif %}"" alt="screenshot">
+                </div>            
+            </div>
+          {% else %}
+            <div class="col1 iconAppDefault"></div>
+          {% endif %}
         <div class="col2 box">
           <a href="{{ path('mapbender_core_application_application', {'slug': application.slug}) }}" class="title" title="{{ 'mb.manager.admin.application.view_this' | trans }}">
             {{ application.title }}
