--- a/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
@@ -29,6 +29,7 @@ $.extend(Mapbender.i18n,
 "mb.manager.components.popup.element_acl.btn.ok": "{{ "mb.manager.components.popup.element_acl.btn.ok" | trans }}",
 "mb.manager.components.popup.element_acl.btn.add": "{{ "mb.manager.components.popup.element_acl.btn.add" | trans }}",
 "mb.manager.components.popup.element_acl.btn.back": "{{ "mb.manager.components.popup.element_acl.btn.back" | trans }}",
-"mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}"
+"mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}",
+"mb.manager.upload.label_delete": "{{ "mb.manager.upload.label_delete" | trans }}"
 }
 );
