--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
@@ -10,16 +10,16 @@
       {{ form_label(form.screenshotFile) }}
 </div>
 
-<div class="screenshot_upload left">
+<div class="screenshot_upload left"  title=" {{ 'mb.manager.admin.application.upload.tooltip' | trans }}">
     <div class="upload left">
         <div class="label left upload_button">
-            Datei auswählen:
+            {{ 'mb.manager.admin.application.upload.button' | trans }}
         </div>
         <div class="label right input upload_label">
             {% if screenshot_filename is not null  %}
                 {{screenshot_filename}}
             {%else%}
-                Keine Datei ausgewählt...
+                {{ 'mb.manager.admin.application.upload.label' | trans }}
             {% endif %}
         </div>
         {{ form_widget(form.screenshotFile) }}
