application export added

--- a/src/Mapbender/ManagerBundle/Resources/views/managerbundle.trans.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/managerbundle.trans.twig
@@ -1,5 +1,7 @@
 {{ "mb.manager.managerbundle.applications" | trans}}
 {{ "mb.manager.managerbundle.new_application" | trans}}
+{{ "mb.manager.managerbundle.import_application" | trans}}
+{{ "mb.manager.managerbundle.export_application" | trans}}
 {{ "mb.manager.managerbundle.sources" | trans}}
 {{ "mb.manager.managerbundle.add_source" | trans}}
 
