--- a/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
@@ -30,6 +30,7 @@ $.extend(Mapbender.i18n,
 "mb.manager.components.popup.element_acl.btn.add": "{{ "mb.manager.components.popup.element_acl.btn.add" | trans }}",
 "mb.manager.components.popup.element_acl.btn.back": "{{ "mb.manager.components.popup.element_acl.btn.back" | trans }}",
 "mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}",
-"mb.manager.upload.label_delete": "{{ "mb.manager.upload.label_delete" | trans }}"
+"mb.manager.upload.label_delete": "{{ "mb.manager.upload.label_delete" | trans }}",
+"mb.core.entity.app.screenshotfile.error": "{{ "mb.core.entity.app.screenshotfile.error" | trans }}"
 }
 );
