--- a/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
@@ -29,12 +29,6 @@ $.extend(Mapbender.i18n,
 "mb.manager.components.popup.element_acl.btn.ok": "{{ "mb.manager.components.popup.element_acl.btn.ok" | trans }}",
 "mb.manager.components.popup.element_acl.btn.add": "{{ "mb.manager.components.popup.element_acl.btn.add" | trans }}",
 "mb.manager.components.popup.element_acl.btn.back": "{{ "mb.manager.components.popup.element_acl.btn.back" | trans }}",
-"mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}",
-"mb.manager.application.popup.export.title": "{{ "mb.manager.application.popup.export.title" | trans }}",
-"mb.manager.application.popup.export.btn.cancel": "{{ "mb.manager.application.popup.export.btn.cancel" | trans }}",
-"mb.manager.application.popup.export.btn.ok": "{{ "mb.manager.application.popup.export.btn.ok" | trans }}",
-"mb.manager.application.popup.import.title": "{{ "mb.manager.application.popup.import.title" | trans }}",
-"mb.manager.application.popup.import.btn.cancel": "{{ "mb.manager.application.popup.import.btn.cancel" | trans }}",
-"mb.manager.application.popup.import.btn.ok": "{{ "mb.manager.application.popup.import.btn.ok" | trans }}"
+"mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}
 }
 );
