--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/applications.scss
@@ -221,6 +221,27 @@
   .iconCheckbox{@extend .iconPublish}
   .iconCheckboxActive{@extend .iconPublishActive}
 }
+
+.containerExchange {
+  border: 1px solid #c0c0c0;
+  background-color: #f9f9f9;
+  padding: 20px;
+  .labelInput{
+    width:80px;
+    float:left;
+    display: block;
+    margin-bottom: $space/2;
+  }
+  label {
+    margin-right: 10px;
+  }
+  .dropdown{min-width: 300px;}
+  .messageBox{
+    width:270px;
+    @include absolute($space $space '' '');
+  }
+}
+
 .popup{
   .popupSubContent{
     overflow: visible;
