--- a/src/Mapbender/ManagerBundle/Resources/views/Application/export-form.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/export-form.html.twig
@@ -1,15 +1,22 @@
-<form action="{{ path('mapbender_manager_application_export') }}" method="post" name="{{ 'mb.manager.admin.application.export' | trans }}" {{ form_enctype(form)}}  novalidate="novalidate" target="_blank">
+<form action="{{ path('mapbender_manager_application_export') }}" method="post" id="exportForm" name="exportForm" {{ form_enctype(form)}}  novalidate="novalidate" target="_blank">
   <div class="defaultForm elementForm">
-    {{ form_label(form.applications) }}{{ form_widget(form.applications) }}
+    <div class="left">
+        {{ form_widget(form.addAcl) }}<label for="{{form.addAcl.vars.id}}" class="labelCheck">{{"mb.manager.admin.application.export.addAcl"|trans}}</label>
+    </div>
     <div class="clearContainer"></div>
     <div class="left">
-        {{ form_widget(form.acl) }}<label for="{{form.acl.vars.id}}" class="labelCheck">{{"mb.manager.admin.application.export.acl"|trans}}</label>
+        {{ form_widget(form.addSources) }}<label for="{{form.addSources.vars.id}}" class="labelCheck">{{"mb.manager.admin.application.export.addSources"|trans}}</label>
     </div>
+    <div class="clearContainer"></div>
+    {{ form_label(form.format) }}{{ form_widget(form.format) }}
+    <div class="clearContainer"></div>
+    {{ form_label(form.applications) }}{{ form_widget(form.applications) }}
+    <div class="clearContainer"></div>
   </div>
   <div class="clearContainer"></div>
   <div class="right">
-    <input type="submit" value="{{ 'mb.manager.admin.application.save' | trans }}" class="button"/>
-    <a href="{{ url('mapbender_manager_application_index') }}" class="button critical">{{ 'mb.manager.admin.application.cancel' | trans}}</a>
+    <input type="submit" value="{{ 'mb.manager.admin.application.export.btn.export' | trans }}" class="button"/>
+    <a href="{{ url('mapbender_manager_application_index') }}" class="button critical">{{ 'mb.manager.admin.application.export.btn.cancel' | trans}}</a>
   </div>
   <div class="clearContainer"></div>
   {{ form_row(form._token) }}
