--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance-layer-form.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance-layer-form.html.twig
@@ -29,7 +29,7 @@
                 <div class="infoMsgBox hide">
                   <span class="hide layer-priority">{{ form_widget(form_layer.priority) }}</span
                   <span class="labelText">{{ "mb.wms.wmsloader.repo.instancelayerform.label.id"|trans }}</span><span class="smallText">{{instance.id}}</span><br>
-                  <span class="labelText">{{ "mb.wms.wmsloader.repo.instancelayerform.label.layersname"|trans }}</span><span class="smallText">{{ form_layer.vars.data.wmslayersource.name}}</span>
+                  <span class="labelText">{{ "mb.wms.wmsloader.repo.instancelayerform.label.layersname"|trans }}</span><span class="smallText">{{ form_layer.vars.data.sourceItem.name}}</span>
                   <br>
                   <span class="labelText">{{"mb.wms.wmsloader.repo.instancelayerform.label.style"|trans}}</span>{{ form_widget(form_layer.style) }}
                 </div>
