--- a/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/basesourceswitcher.html.twig
@@ -1,7 +1,18 @@
 <ul id="{{ id }}" class="mb-element mb-element-basesourceswitcher"  title="{{ configuration.tooltip|default(title)|trans }}">
-{% if configuration.sourcesets is defined %}
-  {% for sourceset in configuration.sourcesets %}
-    <li class="basesourcesetswitch bsswtch-{{ loop.index }}" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in sourceset.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ sourceset.title | trans }}</li>
+{% if configuration.groups is defined %}
+  {% for name, opts in configuration.groups %}
+    {% if opts.title is defined %}
+    <li class="basesourcesetswitch notgroup" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in opts.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ opts.title | trans }}</li>
+    {% else %}
+    <li class="basesourcegroup" data-state="{% if loop.first %}active{% endif %}">
+      <span>{{ name | trans }}</span>
+      <ul class="basesourcesubswitcher hidden">
+      {% for opt in opts %}
+          <li class="basesourcesetswitch" data-state="{% if loop.first %}active{% endif %}" data-sourceset="{% for source in opt.sources %}{% if not loop.first %},{% endif %}{% spaceless %}{{- source -}}{% endspaceless %}{% endfor %}" >{{ opt.title | trans }}</li>
+      {% endfor %}
+      </ul>
+    </li>
+    {% endif %}
   {% endfor %}
 {% endif %}
 </ul>
