--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block manager_content %}
-  <form action="{{ path('mapbender_manager_application_create') }}" method="post" name="{{ form_name }}" {{ form_enctype(form)}} novalidate="novalidate">
+  <form action="{{ path('mapbender_manager_application_create') }}" method="post" name="{{ form.vars.name }}" {{ form_enctype(form)}} novalidate="novalidate">
     <div id="applicationTabContainer" class="tabContainer applicationTabContainer">
       <ul class="tabs">
         <li id="tabBaseData" class="tab active">{{"mb.manager.admin.application.new.base_data" | trans }}</li>
