screnshot validation added

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-basic.html.twig
@@ -7,11 +7,13 @@
 <div class="clearContainer"></div>
 
 <div class="left">
-      {{ form_label(form.screenshotFile) }}
+    {{ form_label(form.screenshotFile) }}
 </div>
+
 
 <div class="screenshot_upload left"  title=" {{ 'mb.manager.admin.application.upload.tooltip' | trans }}">
     <div class="upload left">
+       
         <div class="label left upload_button">
             {{ 'mb.manager.admin.application.upload.button' | trans }}
         </div>
@@ -22,9 +24,12 @@
                 {{ 'mb.manager.admin.application.upload.label' | trans }}
             {% endif %}
         </div>
+       
         {{ form_widget(form.screenshotFile) }}
+        {{ form_widget(form.maxFileSize) }}
     </div>
 </div>
+
 
 
 
