--- a/src/Mapbender/CoreBundle/Resources/views/corebundle.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/corebundle.json.twig
@@ -4,5 +4,5 @@
 "mb.core.featureinfo.popup.btn.ok": "{{ "mb.core.featureinfo.popup.btn.ok" | trans }}",
 "mb.core.metadata.popup.title" : "{{ "mb.core.metadata.popup.title" | trans }}",
 "mb.core.metadata.popup.btn.ok" : "{{ "mb.core.metadata.popup.btn.ok" | trans }}",
-"mb.core.entity.app.screenshotfile.error": "{{ "mb.core.entity.app.screenshotfile.error" | trans }}"
+"mb.core.entity.app.screenshotfile.error": "{{ "mb.core.entity.app.screenshotfile.error" | trans }}
 }
