--- a/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/components.json.twig
@@ -31,6 +31,7 @@ $.extend(Mapbender.i18n,
 "mb.manager.components.popup.element_acl.btn.back": "{{ "mb.manager.components.popup.element_acl.btn.back" | trans }}",
 "mb.manager.components.popup.element_acl.btn.remove": "{{ "mb.manager.components.popup.element_acl.btn.remove" | trans }}",
 "mb.manager.upload.label_delete": "{{ "mb.manager.upload.label_delete" | trans }}",
-"mb.core.entity.app.screenshotfile.error": "{{ "mb.core.entity.app.screenshotfile.error" | trans }}"
+"mb.core.entity.app.screenshotfile.error": "{{ "mb.core.entity.app.screenshotfile.error" | trans }}",
+"mb.core.entity.app.screenshotfile.format_error": "{{ "mb.core.entity.app.screenshotfile.format_error" | trans }}"
 }
 );
