--- a/src/Mapbender/ManagerBundle/Resources/views/Application/form-layerset.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/form-layerset.html.twig
@@ -4,8 +4,8 @@
     {% set form_url =  path('mapbender_manager_application_savelayerset_1', { 'slug': application.slug, 'layersetId': form.vars.data.id}) %}
 {% endif %}
 
-<form id="layersetForm" class="layersetForm" action="{{ form_url }}" method="post" name="layersetForm" {{ form_enctype(form)}} novalidate="novalidate">
+<form id="layersetForm" class="layersetForm" action="{{ form_url }}" method="post" name="{{ form.vars.name }}" {{ form_enctype(form)}} novalidate="novalidate">
     {{form_label(form.title)}}{{form_widget(form.title)}}
-
+    {{form_label(form.name)}}{{form_widget(form.name)}}
     {{ form_row(form._token) }}
 </form>
