SearchRouter formViews creation in controller

--- a/src/Mapbender/CoreBundle/Resources/views/Element/search_router.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/search_router.html.twig
@@ -2,9 +2,9 @@
     {{ form_widget(element.getRouteSelectForm.route) }}
 
     <div class="search-forms" novalidate="novalidate">
-        {% for form in element.forms %}
+        {% for form in element.formViews %}
             <form name="{{ form.vars.name }}" autocomplete="off">
-                {{ form_widget(form.createView) }}
+                {{ form_widget(form) }}
             </form>
         {% endfor %}
     </div>
