--- a/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
@@ -210,9 +210,9 @@
     {% for dimension in layer.dimension %}
       <li>
         <span class="metaText">
-          {{ dimension.name }} {{ dimension.units }} {{ dimension.unitSymbol }}
-          {{ dimension.default }} {{ dimension.multipleValues }} {{ dimension.nearestValue }}
-          {{ dimension.current }} {{ dimension.extentValue }}
+          name:'{{ dimension.name }}', units:'{{ dimension.units }}', unitSymbol:'{{ dimension.unitSymbol }}',
+          default:'{{ dimension.default }}', multipleValues:'{{ dimension.multipleValues }}', nearestValue:'{{ dimension.nearestValue }}'
+          current:'{{ dimension.current }}', extent:'{{ dimension.extent }}'
         <span>
       </li>
     {% endfor %}
@@ -227,7 +227,7 @@
         <li>
           <span class="metaText">
             {{ extent.name }} {{ extent.default }} {{ extent.multipleValues }}
-            {{ extent.nearestValue }} {{ extent.current }} {{ extent.extentValue }}
+            {#{ extent.nearestValue }} {{ extent.current }} {{ extent.extentValue }#}
           <span>
         </li>
       {% endfor %}
