--- a/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/featureinfo.json.twig
@@ -1,5 +1,5 @@
 {
 "mb.core.metadata.popup.title": "{{ "mb.core.metadata.popup.title" | trans }}",
 "mb.core.featureinfo.popup.btn.ok": "{{ "mb.core.featureinfo.popup.btn.ok" | trans }}",
-"mb.core.featureinfo.error.nolayer":{{"mb.core.featureinfo.error.nolayer" | trans}}
+"mb.core.featureinfo.error.nolayer": "{{"mb.core.featureinfo.error.nolayer" | trans}}"
 }
