--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -30,7 +30,7 @@
     <div class="clear"></div>
 
     <div class="metaData">
-      <div class="left leftContainer">
+      <div class="left leftContainer textFieldGroup">
         {{ form_label(form.title) }}{{ form_widget(form.title) }}
         <div class="clear"></div>
         {{ form_label(form.format) }}{{ form_widget(form.format) }}
@@ -43,7 +43,7 @@
         <div class="clear"></div>
       </div>
 
-      <div class="left rightContainer">
+      <div class="left rightContainer checkboxGroup">
         <div class="left">
         {{ form_widget(form.visible) }}<label for="{{form.visible.vars.id}}" class="labelCheck">{{"mb.wms.wmsloader.repo.instance.label.visible"|trans}}</label>
         </div>
@@ -65,11 +65,16 @@
         </div>
         <div class="clear"></div>
       </div>
-    {#% if dimensions is not null %}
-      <div class="left rightContainer">
-        {{ dump(dimensions) }}
+      {% if form.dimensions is not null and form.dimensions | length > 0 %}
+      <div class="dimensionGroup">
+          <div id="dimension" class="on-off">{{ 'mb.wms.repo.instance.label.dimensions' | trans }}</div>
+          <div id="dimension-content" class="on-off-content hidden">
+        {% for dim in form.dimensions %}
+        {% include "MapbenderWmsBundle:Repository:dimension-form.html.twig"  with {'dim': dim, 'num': loop.index }%}
+        {% endfor %}
+        </div>
       </div>
-    {% endif %#}
+      {% endif %}
     </div>
 
        
