--- a/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/layer.html.twig
@@ -211,7 +211,7 @@
       <li>
         <span class="metaText">
           name:'{{ dimension.name }}', units:'{{ dimension.units }}', unitSymbol:'{{ dimension.unitSymbol }}', 
-          default:'{{ dimension.default }}', multipleValues:'{{ dimension.multipleValues }}', nearestValue:'{#{ dimension.nearestValue }#}',
+          default:'{{ dimension.default }}', multipleValues:'{{ dimension.multipleValues }}', nearestValue:'{{ dimension.nearestValue }}',
           current:'{{ dimension.current }}', extent:'{{ dimension.extent }}'
         <span>
       </li>
