instance.html.twig restore

--- a/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
+++ b/src/Mapbender/WmsBundle/Resources/views/Repository/instance.html.twig
@@ -65,6 +65,16 @@
         </div>
         <div class="clear"></div>
       </div>
+      {% if form.dimensions is not null and form.dimensions | length > 0 %}
+      <div class="dimensionGroup">
+        <div id="dimension" class="on-off">{{ 'mb.wms.repo.instance.label.dimensions' | trans }}</div>
+        <div id="dimension-content" class="on-off-content hidden">
+          {% for dim in form.dimensions %}
+            {% include "MapbenderWmsBundle:Repository:dimension-form.html.twig"  with {'dim': dim, 'num': loop.index }%}
+          {% endfor %}
+        </div>
+      </div>
+      {% endif %}
     </div>
 
        
