--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -10,28 +10,29 @@
       <div class="checkWrapper left iconInfo featureInfoWrapper" title="{{ 'mb.core.layertree.label.featureinfo_onoff' | trans  }}">
         <input class="layer-info checkbox" type="checkbox" name="info"/>
       </div>
-      <span class="layer-title labelCheck"></span>
-      {% if configuration.menu is defined and configuration.menu != null and configuration.menu | length > 0 %}
-      <span class="layer-menu-btn iconMenu">
-        <div id="layer-menu" class="layer-menu hidden">
-        {% for item in configuration.menu %}
-          {% if item == 'opacity' %}
-          <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}:</span>
-          <div id="layer-opacity" class="layer-opacity-bar">
-              <div class="layer-opacity-handle">100</div>
-          </div>
-          {% elseif item == 'zoomtolayer' %}
-          <div class="layer-zoom span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</div>
-          {% elseif item == 'metadata' %}
-          <div class="layer-metadata span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.metadata'|trans }}</div>
-          {% else %}
-          <span class="layer span-btn labelInput inactive">Undefined</span>
-          {% endif %}
-        {% endfor %}
-        </div>
+        <span class="layer-title labelCheck"></span>
+        <span class="iconRemove layer-remove-btn right" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></span>
+        {% if configuration.menu is defined and configuration.menu != null and configuration.menu | length > 0 %}
+            <span class="iconMenu right layer-menu-btn">
+            <div id="layer-menu" class="layer-menu hidden">
+            {% for item in configuration.menu %}
+                {% if item == 'opacity' %}
+                    <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}
+                        :</span>
+                    <div id="layer-opacity" class="layer-opacity-bar">
+                        <div class="layer-opacity-handle">100</div>
+                    </div>
+                {% elseif item == 'zoomtolayer' %}
+                    <div class="layer-zoom span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</div>
+                {% elseif item == 'metadata' %}
+                    <div class="layer-metadata span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.metadata'|trans }}</div>
+                {% else %}
+                    <span class="layer span-btn labelInput inactive">Undefined</span>
+                {% endif %}
+            {% endfor %}
+            </div>
       </span>
-      {% endif %}
-      <span class="iconRemove" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></span>
+        {% endif %}
     </div>
     <ul id="list-first" class="layers"></ul>
   </li>
