--- a/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/libs/_mixins.scss
@@ -43,6 +43,7 @@
 }
 @mixin noUserSelect(){
   -webkit-user-select: none;
+  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
