--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -11,27 +11,28 @@
         <input class="layer-info checkbox" type="checkbox" name="info"/>
       </div>
         <span class="layer-title labelCheck"></span>
-        <span class="iconRemove layer-remove-btn right" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></span>
+        <span class="iconRemove layer-remove-btn right" style="display: none" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></span>
         {% if configuration.menu is defined and configuration.menu != null and configuration.menu | length > 0 %}
             <span class="iconMenu right layer-menu-btn">
-            <div id="layer-menu" class="layer-menu hidden">
-            {% for item in configuration.menu %}
-                {% if item == 'opacity' %}
-                    <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}
-                        :</span>
-                    <div id="layer-opacity" class="layer-opacity-bar">
-                        <div class="layer-opacity-handle">100</div>
-                    </div>
-                {% elseif item == 'zoomtolayer' %}
-                    <div class="layer-zoom span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</div>
-                {% elseif item == 'metadata' %}
-                    <div class="layer-metadata span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.metadata'|trans }}</div>
-                {% else %}
-                    <span class="layer span-btn labelInput inactive">Undefined</span>
-                {% endif %}
-            {% endfor %}
-            </div>
-      </span>
+                <div id="layer-menu" class="layer-menu hidden">
+                    <span class="iconRemove exit-button" title="{{ 'mb.core.layertree.tooltip.menu.close'|trans }}"></span>
+                    {% for item in configuration.menu %}
+                    {% if item == 'opacity' %}
+                        <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}
+                            :</span>
+                        <div id="layer-opacity" class="layer-opacity-bar">
+                            <div class="layer-opacity-handle">100</div>
+                        </div>
+                    {% elseif item == 'zoomtolayer' %}
+                        <div class="layer-zoom span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</div>
+                    {% elseif item == 'metadata' %}
+                        <div class="layer-metadata span-btn inactive button buttonOk">{{ 'mb.core.layertree.label.metadata'|trans }}</div>
+                    {% else %}
+                        <span class="layer span-btn labelInput inactive">Undefined</span>
+                    {% endif %}
+                {% endfor %}
+                </div>
+            </span>
         {% endif %}
     </div>
     <ul id="list-first" class="layers"></ul>
