--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -50,12 +50,8 @@
       margin-left:-6px;
       margin-top:1px; // Fix for Firefox
 
-      .layer-menu-btn,
-      .layer-remove-btn {
-          margin-left: 4px;
-      }
-
       .layer-menu-btn{
+        margin-left: 4px;
         position: relative !important;
         &:before{
           content: '\f0c9';
@@ -94,6 +90,7 @@ $layer-opacity-bar-height: 5px;
   right: -5px;
   background-color: white;
   padding: $space/2;
+  padding-top: 20px;
   margin-top: $space/2;
   margin-left: -5px;
   z-index: 20;
@@ -102,11 +99,15 @@ $layer-opacity-bar-height: 5px;
   border: solid 1px $thirdColor;
   @include border-radius($radius);
 
-
   & *{
     @include noUserSelect();
   }
 
+  .labelInput {
+    display: block;
+    position: relative;
+    margin-top: -20px;
+  }
 
   .exit-button{
     position: absolute;
