layer menu title text styling improved

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -107,6 +107,7 @@ $layer-opacity-bar-height: 5px;
     display: block;
     position: relative;
     margin-top: -20px;
+    white-space: nowrap;
   }
 
   .exit-button{
