--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -15,7 +15,7 @@
         {% if configuration.menu is defined and configuration.menu != null and configuration.menu | length > 0 %}
             <span class="iconMenu right layer-menu-btn">
                 <div id="layer-menu" class="layer-menu hidden">
-                    <span class="iconRemove exit-button" title="{{ 'mb.core.layertree.tooltip.menu.close'|trans }}"></span>
+                    <span class="iconCancel exit-button" title="{{ 'mb.core.layertree.tooltip.menu.close'|trans }}"></span>
                     {% for item in configuration.menu %}
                     {% if item == 'opacity' %}
                         <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}:</span>
@@ -23,12 +23,12 @@
                             <div class="layer-opacity-handle">100</div>
                         </div>
                     {% elseif item == 'zoomtolayer' %}
-                        <div class="layer-zoom span-btn inactive button">{{ 'mb.core.layertree.label.zoomtolayer'|trans }}</div>
+                        <div class="layer-zoom iconSearch iconSmall" title="{{ 'mb.core.layertree.label.zoomtolayer'|trans }}"></div>
                     {% elseif item == 'metadata' %}
-                        <div class="layer-metadata span-btn inactive button ">{{ 'mb.core.layertree.label.metadata'|trans }}</div>
+                        <div class="layer-metadata iconFileText iconSmall" title="{{ 'mb.core.layertree.label.metadata'|trans }}"></div>
                     {% endif %}
                     {% endfor %}
-                    <div class="layer-remove-btn button critical">{{ 'mb.core.layertree.tooltip.removelayer'|trans }}</div>
+                    <div class="layer-remove-btn iconRemove iconSmall" title="{{ 'mb.core.layertree.tooltip.removelayer'|trans }}"></div>
                 </div>
             </span>
         {% endif %}
