--- a/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/layertree.html.twig
@@ -18,7 +18,7 @@
                     <span class="iconCancel exit-button" title="{{ 'mb.core.layertree.tooltip.menu.close'|trans }}"></span>
                     {% for item in configuration.menu %}
                     {% if item == 'opacity' %}
-                        <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.transparency"|trans }}:</span>
+                        <span id="layer-opacity-title" class="labelInput">{{ "mb.core.layertree.label.opacity"|trans }}:</span>
                         <div id="layer-opacity" class="layer-opacity-bar">
                             <div class="layer-opacity-handle">100</div>
                         </div>
