--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/layertree.scss
@@ -97,6 +97,8 @@ $layer-opacity-bar-height: 5px;
   min-width: 120px;
   max-width: 200px;
   border: solid 1px $thirdColor;
+  text-align: right;
+  cursor: default;
   @include border-radius($radius);
 
   & *{
@@ -129,7 +131,6 @@ $layer-opacity-bar-height: 5px;
     position: absolute;
     right: 0;
     top: -10px;
-
   }
 
   .layer-opacity-bar {
@@ -138,7 +139,9 @@ $layer-opacity-bar-height: 5px;
     height: $layer-opacity-bar-height;
     background-color: $thirdColor;
     width: 100px;
-    margin-bottom: $space;
+    margin-top: $space/3;
+    margin-bottom: $space/2;
+    cursor: pointer;
     @include border-radius(2px);
 
     .layer-opacity-handle {
