import/export changed

--- a/src/Mapbender/ManagerBundle/Resources/views/managerbundle.trans.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/managerbundle.trans.twig
@@ -7,3 +7,7 @@
 
 {{ "mb.manager.template.region.tabs.label" | trans}}
 {{ "mb.manager.template.region.accordion.label" | trans}}
+
+{{ "mb.manager.import.application.failed" | trans}}
+{{ "mb.manager.import.acl.failed" | trans}}
+{{ "mb.manager.import.source.failed" | trans}}
