--- a/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizertoolbar.html.twig
+++ b/src/Mapbender/DigitizerBundle/Resources/views/Element/digitizertoolbar.html.twig
@@ -1,3 +1,16 @@
 <div id="{{ id }}" class="mb-element mb-element-digitizertoolbar hidden" title="{{ title|trans }}">
-    Hier gehts ab
+    <input type="button" class="mbdigitizerTool" name="point" value="Point">
+    <input type="button" class="mbdigitizerTool" name="line" value="Line">
+    <input type="button" class="mbdigitizerTool" name="polygon" value="Polygon">
+    <input type="button" class="mbdigitizerTool" name="rectangle" value="Rectangle">
+    <input type="button" class="mbdigitizerTool" name="circle" value="Circle">
+    <input type="button" class="mbdigitizerTool" name="donut" value="Donut"><br>
+    <input type="button" class="mbdigitizerTool" name="drag" value="Drag">
+    <input type="button" class="mbdigitizerTool" name="modify" value="Modify"><br>
+    <input type="button" class="mbdigitizerTool" name="select" value="Select"><br>
+    <input type="button" class="mbdigitizerMerge" name="merge" value="Merge"><br>
+    <input type="button" class="mbdigitizerSplit" name="split" value="Split"><br>
+    <input type="button" class="mbdigitizerBuffer" name="buffer" value="Buffer"> Radius:<input type="text" name="bufferRadius"><br>
+    <br>
+    Switch Layer: <input type="button" id="mbdigitizerLayerSwitch" value="Layer1">
 </div>
