added new tokenizer regexp

--- a/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/ElementAdmin/simplesearch.html.twig
@@ -9,6 +9,8 @@
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.query_format) }}{{ form_widget(form.configuration.query_format) }}
     <div class="clearContainer"></div>
+    {{ form_label(form.configuration.token_regex) }}{{ form_widget(form.configuration.token_regex) }}
+    <div class="clearContainer"></div>
     {{ form_label(form.configuration.token_regex_in) }}{{ form_widget(form.configuration.token_regex_in) }}
     <div class="clearContainer"></div>
     {{ form_label(form.configuration.token_regex_out) }}{{ form_widget(form.configuration.token_regex_out) }}
