--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -117,6 +117,19 @@
   .sidePaneTabItem{@extend .iconClose;}
 }
 
+.metadataDialog{
+  .popupContent {
+    margin-bottom: 0px;
+    height: 100%;
+    .contentItem {
+      height: 100%;
+    }
+  }
+}
+.metadataDialog .popupContent .contentItem {
+  height: 100%;
+}
+
 .metadataContainer{
   $labeText:85px;
 
