accordion noActive added

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_tabcontainer.scss
@@ -52,6 +52,9 @@
   width: 100%;
   height: 100%;
   display: table;
+  &.noActive{
+  display: block;
+  }
   .tab{
     display: inline-block;
     @extend .button;
